Fixed slider content text alignment

--- a/src/components/ImgSlider/ImgSlider.scss
+++ b/src/components/ImgSlider/ImgSlider.scss
@@ -18,6 +18,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  text-align: center;
   align-items: center;
   flex-direction: column;
   justify-content: center;
